--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "next-auth": "5.0.0-beta.28",
     "pg": "^8.16.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
