--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@prisma/client": "^7.2.0",
     "@prisma/extension-accelerate": "^3.0.1",
     "dotenv": "^17.2.3",
+    "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "next-auth": "5.0.0-beta.28",
     "pg": "^8.16.3",
+    "posthog-js": "^1.309.1",
+    "posthog-node": "^5.17.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
