--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "set NEXT_TURBOPACK=0&& next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -14,15 +14,19 @@
     "@prisma/client": "^7.2.0",
     "@prisma/extension-accelerate": "^3.0.1",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.26",
     "jose": "^6.1.3",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "next-auth": "5.0.0-beta.28",
+    "paystack-api": "^2.0.6",
     "pg": "^8.16.3",
     "posthog-js": "^1.309.1",
     "posthog-node": "^5.17.4",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "redis": "^4.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -30,6 +34,7 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/redis": "^4.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
     "prisma": "^7.2.0",
