--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "set NEXT_TURBOPACK=0&& next build",
+    "build": "prisma generate && cross-env NEXT_TURBOPACK=0 next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -35,6 +35,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/redis": "^4.0.0",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
     "prisma": "^7.2.0",
