--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@prisma/extension-accelerate": "^3.0.1",
+    "@types/pdfkit": "^0.17.4",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
     "jose": "^6.1.3",
@@ -21,6 +22,7 @@
     "next": "16.1.0",
     "next-auth": "5.0.0-beta.28",
     "paystack-api": "^2.0.6",
+    "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "posthog-js": "^1.309.1",
     "posthog-node": "^5.17.4",
