--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "prisma generate && cross-env NEXT_TURBOPACK=0 next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "email": "email dev"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@prisma/extension-accelerate": "^3.0.1",
+    "@react-email/components": "^1.0.2",
     "@types/pdfkit": "^0.17.4",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
@@ -28,10 +30,13 @@
     "posthog-node": "^5.17.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-email": "^5.1.0",
     "redis": "^4.6.0",
+    "resend": "^6.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@react-email/preview-server": "5.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
