opti,ized upload speed

--- a/.env
+++ b/.env
@@ -23,3 +23,6 @@ BASE_URL="https://localhost:3000"
 
 RESEND_API_KEY="re_ctBkaDYn_AChLv85W5NDqTgzNzfTKigw9"
 EMAIL_FROM="SecureUploadHub onboarding@resend.dev"
+
+
+# sk-user-lK4eoMYybQyH6w5kGYivRY5Ux-RcCDb0LujzHB8jhvhZ0XLpDA_zvFVwzFPRbI4cd6fX9EwghzsNiFF8379U5f1L9-b_UImoRghssHkU5cLWKQzPFiBw4KO2xEt5OYS5rWc
