--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "next dev",
     "build": "prisma generate && cross-env NEXT_TURBOPACK=0 next build",
     "start": "next start",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
     "lint": "eslint",
     "email": "email dev"
   },
@@ -43,13 +46,16 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/redis": "^4.0.0",
+    "@vitest/coverage-v8": "4.0.16",
+    "@vitest/ui": "^2.0.0",
     "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
     "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.16"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
