--- a/.env
+++ b/.env
@@ -1,28 +1,26 @@
-DATABASE_URL="postgresql://neondb_owner:npg_vWeq2TPYg3Xh@ep-aged-mud-a4hic3kj-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-
-AUTH_SECRET="V21hv5sFP43sH4ZVJDH+A6wLm0n4kv3swoH18ZKHNkPYruspIt49vn6AucU="
-
-GOOGLE_CLIENT_ID="216549749168-olp0n2t1697r4clbdo5jchuhitlk2q9r.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
-
-DROPBOX_CLIENT_ID="7ilplcbpgxo3qlc"
-DROPBOX_CLIENT_SECRET="7ycap9v4735lut5"
-
-NEXTAUTH_URL="https://localhost:3000"
-
-NEXT_PUBLIC_POSTHOG_KEY="phc_4o1mIBBsPWW35pwgQJzlt7CLnZqHZkE4oossEoFROJu"
-NEXT_PUBLIC_POSTHOG_HOST="https://us.i.posthog.com"
-
-PAYSTACK_PUBLIC_KEY="pk_test_0582f8256e477ff055ef6e8b89acf1dbb702292c"
-PAYSTACK_SECRET_KEY="sk_test_f8ffaabde856d6f5a8b30ea0c9edfd84bc195505"
-PAYSTACK_WEBHOOK_SECRET="https://localhost:3000/api/paystack-webhook"
-
-
-REDIS_URL="redis://localhost:6379"
-BASE_URL="https://localhost:3000"
-
-RESEND_API_KEY="re_ctBkaDYn_AChLv85W5NDqTgzNzfTKigw9"
-EMAIL_FROM="SecureUploadHub onboarding@resend.dev"
-
-
-# sk-user-lK4eoMYybQyH6w5kGYivRY5Ux-RcCDb0LujzHB8jhvhZ0XLpDA_zvFVwzFPRbI4cd6fX9EwghzsNiFF8379U5f1L9-b_UImoRghssHkU5cLWKQzPFiBw4KO2xEt5OYS5rWc
+NODE_ENV=test
+NODE_OPTIONS="--max-old-space-size=2048 --http-parser=llhttp"
+UPLOAD_TIMEOUT=600000
+REQUEST_TIMEOUT=600000
+API_REQUEST_TIMEOUT=600000
+SERVER_KEEP_ALIVE_TIMEOUT=65000
+DATABASE_POOL_MIN=2
+DATABASE_POOL_MAX=10
+DATABASE_POOL_TIMEOUT=30
+REDIS_URL=redis://localhost:6379
+REDIS_TIMEOUT=10000
+MAX_UPLOAD_SIZE=5368709120
+CHUNK_SIZE=5242880
+MAX_PARALLEL_CHUNKS=4
+NEXTAUTH_SECRET=test-secret-key-for-testing
+NEXTAUTH_URL=http://localhost:3000
+GOOGLE_CLIENT_ID=test
+GOOGLE_CLIENT_SECRET=test
+GOOGLE_SCOPES=https://www.googleapis.com/auth/drive
+DROPBOX_CLIENT_ID=test
+DROPBOX_CLIENT_SECRET=test
+DROPBOX_SCOPES=files.content.read,files.content.write
+ENABLE_PERFORMANCE_MONITORING=true
+PERFORMANCE_LOG_THRESHOLD=1000
+DATABASE_URL=postgresql://test:test@localhost:5432/test
+RESEND_API_KEY=test
