made them db ok

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+DATABASE_URL="postgresql://neondb_owner:npg_vWeq2TPYg3Xh@ep-aged-mud-a4hic3kj-pooler.us-east-1.aws.neon.tech/prisma_migrate_shadow_db_ac8db6c9-bb35-4bb0-84aa-e5974d7e98bd?sslmode=require&channel_binding=require"
+# uncomment next line if you use Prisma <5.10
+# DATABASE_URL_UNPOOLED="postgresql://neondb_owner:npg_vWeq2TPYg3Xh@ep-aged-mud-a4hic3kj.us-east-1.aws.neon.tech/prisma_migrate_shadow_db_ac8db6c9-bb35-4bb0-84aa-e5974d7e98bd?sslmode=require&channel_binding=require"
 NODE_ENV=test
 NODE_OPTIONS="--max-old-space-size=2048 --http-parser=llhttp"
 UPLOAD_TIMEOUT=600000
@@ -22,5 +25,4 @@ DROPBOX_CLIENT_SECRET=test
 DROPBOX_SCOPES=files.content.read,files.content.write
 ENABLE_PERFORMANCE_MONITORING=true
 PERFORMANCE_LOG_THRESHOLD=1000
-DATABASE_URL=postgresql://test:test@localhost:5432/test
 RESEND_API_KEY=test
