Update environment templates and ignore actual .env

--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,63 @@
-# Database Configuration
-DATABASE_URL="postgresql://user:password@host:port/dbname?sslmode=require"
-# NODE_ENV=development
-# NODE_OPTIONS=
+# Database
+DATABASE_URL="postgresql://user:password@localhost:5432/db?sslmode=require"
 
-# Timeouts
-UPLOAD_TIMEOUT=300000
-REQUEST_TIMEOUT=30000
-API_REQUEST_TIMEOUT=30000
+# Environment
+NODE_ENV=development
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Auth (Auth.js / NextAuth v5)
+AUTH_SECRET=your-auth-secret
+NEXTAUTH_URL=http://localhost:3000
+
+# Secret for portal password encryption
+PORTAL_PASSWORD_SECRET=your-portal-password-secret
+
+# Google OAuth & Storage
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_SCOPES=https://www.googleapis.com/auth/drive.file
+
+# Dropbox OAuth & Storage
+DROPBOX_CLIENT_ID=your-dropbox-client-id
+DROPBOX_CLIENT_SECRET=your-dropbox-client-secret
+DROPBOX_SCOPES=files.metadata.read,files.content.write,files.content.read
+
+# Payment (Paystack)
+PAYSTACK_PUBLIC_KEY=pk_test_...
+PAYSTACK_SECRET_KEY=sk_test_...
+PAYSTACK_WEBHOOK_SECRET=whsec_...
+
+# Email (Resend)
+RESEND_API_KEY=re_...
+EMAIL_FROM="SecureUploadHub <noreply@yourdomain.com>"
+
+# Email (Mailgun - alternative)
+MAILGUN_API_KEY=key-...
+MAILGUN_DOMAIN=mg.yourdomain.com
+
+# Analytics (PostHog)
+NEXT_PUBLIC_POSTHOG_KEY=phc_...
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
+
+# Cache (Redis)
+REDIS_URL=redis://localhost:6379
+REDIS_TIMEOUT=10000
+
+# Upload Configuration
+MAX_UPLOAD_SIZE=5368709120
+CHUNK_SIZE=5242880
+MAX_PARALLEL_CHUNKS=4
+UPLOAD_TIMEOUT=600000
+
+# Performance & Logging
+ENABLE_PERFORMANCE_MONITORING=true
+PERFORMANCE_LOG_THRESHOLD=1000
+
+# Other Node settings
+NODE_OPTIONS="--max-old-space-size=2048 --http-parser=llhttp"
+REQUEST_TIMEOUT=600000
+API_REQUEST_TIMEOUT=600000
 SERVER_KEEP_ALIVE_TIMEOUT=65000
-
-# Database Pooling
 DATABASE_POOL_MIN=2
 DATABASE_POOL_MAX=10
-DATABASE_POOL_TIMEOUT=30000
-
-# Redis Cache
-REDIS_URL="redis://localhost:6379"
-REDIS_TIMEOUT=5000
-
-# Upload Settings
-MAX_UPLOAD_SIZE=104857600
-CHUNK_SIZE=5242880
-MAX_PARALLEL_CHUNKS=3
-
-# NextAuth
-NEXTAUTH_SECRET="your-nextauth-secret"
-NEXTAUTH_URL="http://localhost:3000"
-
-# OAuth Providers
-GOOGLE_CLIENT_ID="your-google-client-id"
-GOOGLE_CLIENT_SECRET="your-google-client-secret"
-GOOGLE_SCOPES="openid email profile https://www.googleapis.com/auth/drive.file"
-
-DROPBOX_CLIENT_ID="your-dropbox-client-id"
-DROPBOX_CLIENT_SECRET="your-dropbox-client-secret"
-DROPBOX_SCOPES="files.content.write files.content.read"
-
-# Monitoring
-ENABLE_PERFORMANCE_MONITORING=true
-PERFORMANCE_LOG_THRESHOLD=100
-
-# Email
-RESEND_API_KEY="re_your_api_key"
-EMAIL_FROM="SecureUploadHub <noreply@yourdomain.com>"
+DATABASE_POOL_TIMEOUT=30
