--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/extension-accelerate": "^3.0.1",
     "@react-email/components": "^1.0.2",
     "@types/pdfkit": "^0.17.4",
+    "@vercel/analytics": "^1.6.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
     "jose": "^6.1.3",
