--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-email": "^5.1.0",
     "redis": "^4.6.0",
     "resend": "^6.6.0",
+    "sonner": "^2.0.7",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.3.4"
   },
