--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@prisma/extension-accelerate": "^3.0.1",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-email/components": "^1.0.2",
     "@types/pdfkit": "^0.17.4",
     "@vercel/analytics": "^1.6.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
     "jose": "^6.1.3",
@@ -35,9 +41,11 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-email": "^5.1.0",
+    "recharts": "^3.6.0",
     "redis": "^4.6.0",
     "resend": "^6.6.0",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.3.4"
   },
