--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
+    "test:api": "vitest __tests__/api --run",
+    "test:api:watch": "vitest __tests__/api",
+    "test:api:coverage": "vitest __tests__/api --coverage",
+    "test:all": "vitest --run",
     "lint": "eslint",
     "email": "email dev"
   },
@@ -52,6 +56,8 @@
   "devDependencies": {
     "@react-email/preview-server": "5.1.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
@@ -62,6 +68,7 @@
     "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
+    "jsdom": "^27.4.0",
     "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
