--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ DROPBOX_SCOPES=files.metadata.read,files.content.write,files.content.read
 PAYSTACK_PUBLIC_KEY=pk_test_...
 PAYSTACK_SECRET_KEY=sk_test_...
 PAYSTACK_WEBHOOK_SECRET=whsec_...
+PAYSTACK_DEFAULT_CURRENCY=USD
 
 # Email (Resend)
 RESEND_API_KEY=re_...
