--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,11 @@ REDIS_TIMEOUT=10000
 MAX_UPLOAD_SIZE=5368709120
 CHUNK_SIZE=5242880
 MAX_PARALLEL_CHUNKS=4
+
+# Cloudinary (Image Uploads)
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
 UPLOAD_TIMEOUT=600000
 
 # Performance & Logging
