--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/pdfkit": "^0.17.4",
     "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
@@ -46,6 +47,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "next-auth": "5.0.0-beta.28",
+    "next-cloudinary": "^6.17.5",
     "paystack-api": "^2.0.6",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
