--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "secureuploadhub",
   "version": "0.1.0",
   "private": true,
-    "scripts": {
+  "scripts": {
     "dev": "next dev",
     "build": "prisma generate && cross-env NEXT_TURBOPACK=0 next build",
     "start": "next start",
@@ -18,6 +18,7 @@
     "create-admin": "tsx scripts/create-admin.ts",
     "seed-audit-logs": "tsx scripts/seed-audit-logs.ts",
     "seed-system-settings": "tsx scripts/seed-system-settings.ts",
+    "seed-blog-data": "tsx scripts/seed-blog-data.ts",
     "db:seed": "prisma db seed",
     "check-http2": "node scripts/check-http2.js",
     "analytics:test": "node scripts/test-analytics.js",
@@ -35,6 +36,16 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-email/components": "^1.0.2",
+    "@tiptap/extension-color": "^3.15.2",
+    "@tiptap/extension-highlight": "^3.15.2",
+    "@tiptap/extension-image": "^3.15.2",
+    "@tiptap/extension-link": "^3.15.2",
+    "@tiptap/extension-placeholder": "^3.15.2",
+    "@tiptap/extension-text-align": "^3.15.2",
+    "@tiptap/extension-text-style": "^3.15.2",
+    "@tiptap/pm": "^3.15.2",
+    "@tiptap/react": "^3.15.2",
+    "@tiptap/starter-kit": "^3.15.2",
     "@types/pdfkit": "^0.17.4",
     "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
