--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,11 @@ NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 REDIS_URL=redis://localhost:6379
 REDIS_TIMEOUT=10000
 
+# Distributed Locking & Idempotency (Redis)
+# Use REDIS_URL above, or alternatively use Upstash Redis REST API:
+# UPSTASH_REDIS_REST_URL=https://your-redis-instance.upstash.io
+# UPSTASH_REDIS_REST_TOKEN=your-token
+
 # Upload Configuration
 MAX_UPLOAD_SIZE=5368709120
 CHUNK_SIZE=5242880
