--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:api:watch": "vitest __tests__/api",
     "test:api:coverage": "vitest __tests__/api --coverage",
     "test:all": "vitest --run",
+    "test:race-conditions": "tsx scripts/test-race-condition-fix.ts",
     "lint": "eslint",
     "email": "email dev",
     "create-admin": "tsx scripts/create-admin.ts",
@@ -54,6 +55,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
+    "ioredis": "^5.4.1",
     "jose": "^6.1.3",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.562.0",
