--- a/.env.example
+++ b/.env.example
@@ -40,12 +40,12 @@ MAILGUN_DOMAIN=mg.yourdomain.com
 NEXT_PUBLIC_POSTHOG_KEY=phc_...
 NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 
-# Cache (Redis)
-REDIS_URL=redis://localhost:6379
-REDIS_TIMEOUT=10000
+# Cache (Redis) - Optional for future distributed locking
+# REDIS_URL=redis://localhost:6379
+# REDIS_TIMEOUT=10000
 
-# Distributed Locking & Idempotency (Redis)
-# Use REDIS_URL above, or alternatively use Upstash Redis REST API:
+# Distributed Locking & Idempotency - Currently using in-memory storage
+# For production with multiple server instances, implement Redis:
 # UPSTASH_REDIS_REST_URL=https://your-redis-instance.upstash.io
 # UPSTASH_REDIS_REST_TOKEN=your-token
 
