Fix data integrity issues - remove redundant fields and consolidate data model
PROBLEM FIXED: Inconsistent data integrity with multiple redundant fields
- UploadPortal.storageProvider vs StorageAccount.provider
- FileUpload.storageProvider vs StorageAccount.provider
- StorageAccount.isActive vs StorageAccount.status

SOLUTION IMPLEMENTED:
✅ Schema Updates:
- Marked storageProvider fields as DEPRECATED in schema comments
- Use StorageAccount.status enum as primary source of truth
- Keep isActive field synced for backward compatibility
- Added proper indexes for storageAccountId relationships

✅ Data Integrity Helpers (lib/storage/data-integrity-helpers.ts):
- getFileUploadStorageProvider() - derive provider from relationship
- getUploadPortalStorageProvider() - derive provider from relationship
- isStorageAccountActive() - check status enum first, fallback to isActive
- getActiveStorageAccountsForUser() - proper status-based filtering
- Validation functions for data consistency checks

✅ Code Updates:
- Updated StorageAccountManager to sync isActive with status
- Updated API routes to use new helper functions
- Enhanced storage disconnect to sync both fields
- All operations now use status enum as primary check

✅ Migration Strategy:
- Gradual migration maintaining backward compatibility
- Manual data migration steps documented
- Validation functions to detect inconsistencies
- Future cleanup plan for deprecated fields

BENEFITS:
- Single source of truth for storage provider and account status
- Reduced data redundancy and maintenance burden
- Better data consistency and reliability
- Proper relationship-based data access
- Comprehensive validation and error detection

Build Status: ✅ SUCCESS - All TypeScript compilation passed

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:api:coverage": "vitest __tests__/api --coverage",
     "test:all": "vitest --run",
     "test:race-conditions": "tsx scripts/test-race-condition-fix.ts",
+    "fix:data-integrity": "tsx scripts/fix-data-integrity.ts",
     "lint": "eslint",
     "email": "email dev",
     "create-admin": "tsx scripts/create-admin.ts",
