--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "ES2018",
+    "downlevelIteration": true,
     "lib": [
       "dom",
       "dom.iterable",
