npm run test:billing

--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "test:api:watch": "vitest __tests__/api",
     "test:api:coverage": "vitest __tests__/api --coverage",
     "test:all": "vitest --run",
+    "test:billing": "node run-working-tests.js",
+    "test:billing:basic": "npx vitest run __tests__/billing/basic-billing.test.ts",
+    "test:billing:watch": "npx vitest __tests__/billing/basic-billing.test.ts --watch",
+    "test:billing:coverage": "npx vitest run __tests__/billing/basic-billing.test.ts --coverage",
+    "test:billing:unit": "node test-billing.js unit",
+    "test:billing:integration": "node test-billing.js integration",
+    "test:billing:api": "node test-billing.js api",
     "test:race-conditions": "tsx scripts/test-race-condition-fix.ts",
     "fix:data-integrity": "tsx scripts/fix-data-integrity.ts",
     "lint": "eslint",
