--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,8 +39,6 @@
   ],
   "exclude": [
     "node_modules",
-    "vitest.config.ts",
-    "**/*.test.ts",
-    "**/*.spec.ts"
+    "vitest.config.ts"
   ]
 }
