--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
     "jose": "^6.1.3",
+    "jspdf": "^4.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
@@ -90,6 +91,7 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
